crates/backyard-parser/tests/snapshots/ifs__with_else.snap
---
source: crates/backyard-parser/tests/ifs.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: if
    condition:
      node_type: boolean
      is_true: false
      loc:
        start:
          line: 1
          column: 4
          offset: 4
        end:
          line: 1
          column: 4
          offset: 4
      leadings: []
      trailings: []
    valid:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 12
          offset: 12
      leadings: []
      trailings: []
    invalid:
      node_type: else
      body:
        node_type: block
        statements: []
        loc:
          start:
            line: 1
            column: 19
            offset: 19
          end:
            line: 1
            column: 20
            offset: 20
        leadings: []
        trailings: []
      is_short: false
      loc:
        start:
          line: 1
          column: 14
          offset: 14
        end:
          line: 1
          column: 20
          offset: 20
      leadings: []
      trailings: []
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 20
        offset: 20
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 20
    offset: 20
leadings: []
trailings: []
